# diginavis

./: .clang-format  .gitignore  Mission.proto  Tracking.proto  asyncclient.cpp  asyncclient.h  authorization.cpp  authorization.h  createdrone.cpp  createdrone.h  datetimefact.cpp  datetimefact.h  diginavis.cpp  diginavis.h  diginavisplugin.cpp  diginavisplugin.h  dronecreator.cpp  dronecreator.h  drones.cpp  drones.h  flightplan.cpp  flightplan.h  flightrequestapproved.cpp  flightrequestapproved.h  flightrequestcreator.cpp  flightrequestcreator.h  flightrequests.cpp  flightrequests.h  httpapibase.cpp  httpapibase.h  meson.build  readonlyfact.cpp  readonlyfact.h  telemetry.cpp  telemetry.h
